# inteldoc

./: .gitignore  README.md
api/: .dockerignore  .env.example  .env.prod.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
api/app/: main.py
api/app/api/v1/: admin.py  auth.py  deps.py  doctor.py  health.py  me.py  onboarding.py  plan.py  router.py  support.py  uploads.py
api/app/api/v1/schemas/: admin.py  auth.py  clinical.py  doctor.py  me.py  plan.py  (+2 more)
api/app/core/: audit.py  config.py  errors.py  logging.py  middleware.py  outbox.py  security.py
api/app/db/: base.py  resolver.py  session.py
api/app/db/models/: __init__.py  access.py  admin_agg.py  audit.py  clinical.py  core.py  identity.py  plan.py  support.py
api/app/domain/: capability.py  enums.py  grant_status.py  identity.py  onboarding_plan.py  support_routing.py
api/app/infra/: ocr_adapter.py  ocr_engine.py  redis.py  s3_client.py
api/app/infra/otp/: __init__.py  code_store.py  providers.py
api/app/seed/: admin_seed.py  seed.py
api/app/services/: access_service.py  admin_metrics_service.py  analysis_service.py  auth_service.py  complaint_service.py  consent_service.py  data_subject_service.py  doctor_read_service.py  doctor_write_service.py  document_service.py  idempotency.py  onboarding_service.py  outbox_service.py  plan_service.py  prep_service.py  profile_service.py  support_service.py  uow.py  upload_service.py
api/app/workers/: access_expiry.py  outbox_dispatcher.py  settings.py
api/migrations/: env.py
api/migrations/versions/: 0001_schemas_and_roles.py  0002_audit_trigger.py  0003_core_identity_access.py  0004_clinical_upload.py  0005_rls_policies.py  0006_plan.py  0007_admin_agg.py  0008_support.py
api/tests/: conftest.py  test_enum_frontend_contract.py
api/tests/ci_invariants/: test_schema_shape.py
api/tests/integration/: conftest.py  test_admin_metrics.py  test_audit_and_roles.py  test_auth_flow.py  test_doctor_reads.py  test_doctor_write.py  test_onboarding_access.py  test_plan_loop.py  test_prep.py  test_smoke_pilot.py  test_support.py  test_upload_analysis.py  test_workers.py
api/tests/unit/: test_grant_status.py  test_hardening.py  test_identity.py  test_ocr_parser.py  test_otp.py
(+138 files in other folders)
